# jwt-cpp

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  ClaimTest.cpp  Doxyfile  Makefile  README.md  TokenTest.cpp  annotated.html  annotated_dup.js  base_8h_source.html  boost-json_2defaults_8h_source.html  boost-json_2traits_8h_source.html  classes.html  classjwt_1_1basic__claim-members.html  classjwt_1_1basic__claim.html  classjwt_1_1basic__claim.js  classjwt_1_1builder-members.html  classjwt_1_1builder.html  classjwt_1_1builder.js  classjwt_1_1decoded__jwt-members.html  classjwt_1_1decoded__jwt.html  classjwt_1_1decoded__jwt.js  classjwt_1_1decoded__jwt__inherit__graph.map  classjwt_1_1decoded__jwt__inherit__graph.md5  classjwt_1_1header-members.html  classjwt_1_1header.html  classjwt_1_1header.js  classjwt_1_1header__inherit__graph.map  classjwt_1_1header__inherit__graph.md5  classjwt_1_1helper_1_1evp__pkey__handle-members.html  classjwt_1_1helper_1_1evp__pkey__handle.html  classjwt_1_1helper_1_1evp__pkey__handle.js  classjwt_1_1jwk-members.html  classjwt_1_1jwk.html  classjwt_1_1jwk.js  classjwt_1_1jwks-members.html  classjwt_1_1jwks.html  (+324 more)
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/wolfssl/: Dockerfile
.github/: overrides.css  release.md  security.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  bug_report_old.md  support-question.md  support-question.yml
.github/issue_template/: bug-report.yml
.github/workflows/: cmake.yml  coverage.yml  cross-platform.yml  documentation.yml  header-only.yml  jwt.yml  libresssl.yml  lint.yml  nuget.yml  openssl.yml  package-managers.yml  release.yml  ssl.yml  targets.yml  traits.yml
cmake/: CMakePresets.json  ci-fuzzing-toolchain.cmake  code-coverage.cmake  configure_defaults.cmake  generate-defaults-h.cmake  jwt-cpp-config.cmake.in  linux-clang-toolchain.cmake  private-find-boost-json.cmake  private-find-kazuho-picojson.cmake  render-defaults.cmake  traits-metadata.cmake
conan-example/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
conan-example/cmake/: Conan.cmake
cross-platform/macos-latest/: shields.json
cross-platform/ubuntu-latest/: shields.json
cross-platform/windows-latest/: shields.json
debian/: .gitignore  changelog  control  copyright  rules
docs/: CMakeLists.txt  Doxyfile  faqs.md  getting-started.md  install.md  overrides.css  signing.md  ssl.md  traits.md
example/: CMakeLists.txt  CMakePresets.json  README.md  es256k.cpp  jwks-verify.cpp  partial-claim-verifier.cpp  print-claims.cpp  private-claims.cpp  rsa-create.cpp  rsa-verify.cpp  set-payload.cpp
example/conan/: CMakeLists.txt  conanfile.txt  main.cpp
example/traits/: CMakeLists.txt  README.md  boost-json.cpp  danielaparker-jsoncons.cpp  glaze-json.cpp  kazuho-picojson.cpp  nlohmann-json.cpp  open-source-parsers-jsoncpp.cpp  reflect-cpp.cpp  reflectcpp-json.cpp  stephenberry-glaze.cpp
include/jwt-cpp/: algorithms.h  base.h  errors.h  jwt.h  string_types.h  traits.h
include/nlohmann/: json.hpp
include/picojson/: picojson.h
libressl/3.1.5/: shields.json
libressl/3.2.2/: shields.json
libressl/3.2.3/: shields.json
libressl/3.2.5/: shields.json
libressl/3.2.6/: shields.json
libressl/3.2.7/: shields.json
libressl/3.3.0/: shields.json
libressl/3.3.1/: shields.json
libressl/3.3.3/: shields.json
libressl/3.3.4/: shields.json
libressl/3.3.5/: shields.json
libressl/3.3.6/: shields.json
libressl/3.4.0/: shields.json
libressl/3.4.2/: shields.json
libressl/3.4.3/: shields.json
libressl/3.5.3/: shields.json
libressl/3.9.2/: shields.json
libressl/4.1.2/: shields.json
libressl/4.2.1/: shields.json
modules/: jwt.ixx
nuget/: jwt-cpp.nuspec
openssl/1.0.1u/: shields.json
openssl/1.0.2u/: shields.json
openssl/1.1.0i/: shields.json
openssl/1.1.1k/: shields.json
openssl/1.1.1l/: shields.json
openssl/1.1.1m/: shields.json
openssl/1.1.1o/: shields.json
openssl/1.1.1q/: shields.json
openssl/1.1.1w/: shields.json
openssl/3.0.0/: shields.json
openssl/3.0.0-beta2/: shields.json
openssl/3.0.1/: shields.json
openssl/3.0.19/: shields.json
openssl/3.0.3/: shields.json
openssl/3.0.5/: shields.json
openssl/3.5.5/: shields.json
openssl/3.6.1/: shields.json
openssl/OpenSSL_1_0_2u/: shields.json
openssl/OpenSSL_1_1_0i/: shields.json
openssl/OpenSSL_1_1_1k/: shields.json
openssl/openssl-3.0.0-beta2/: shields.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  (+44 more)
tests/: BaseTest.cpp  CMakeLists.txt  CMakePresets.json  ClaimTest.cpp  HelperTest.cpp  JwkTest.cpp  JwksTest.cpp  Keys.cpp  NlohmannTest.cpp  OpenSSLErrorTest.cpp  PubKeyTest.cpp  TokenFormatTest.cpp  TokenTest.cpp
tests/boost/: BoostJsonTest.cpp  CMakeLists.txt  conanfile.txt  main.cpp
tests/cmake/: CMakeLists.txt  base64-is-disabled.cpp  defaults-enabled.cpp  libressl-is-used.cpp  picojson-is-disabled.cpp  wolfssl-is-used.cpp
tests/fuzz/: BaseDecodeFuzz.cpp  BaseEncodeFuzz.cpp  BaseFuzz.cpp  CMakeLists.txt  TokenDecodeFuzz.cpp  TokenSignFuzz.cpp
tests/jsoncons/: CMakeLists.txt  JsonconsTest.cpp
tests/traits/: BoostJsonTest.cpp  GlazeTest.cpp  JsonconsTest.cpp  NlohmannTest.cpp  OspJsoncppTest.cpp  PicoJsonTest.cpp  ReflectCppJsonTest.cpp  ReflectCppTest.cpp  StephenberryGlazeTest.cpp  TraitsTest.cpp.mustache
traits/boost-json/: shields.json
traits/danielaparker-jsoncons/: shields.json
traits/glaze-json/: shields.json
traits/kazuho-picojson/: shields.json
traits/nlohmann-json/: shields.json
traits/open-source-parsers-jsoncpp/: shields.json
vcpkg/: CONTROL  portfile.cmake
wolfssl/5.0.0/: shields.json
(+78 files in other folders)
